--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
   <div id="content-main" class="main" role="main">
 
 <div id="mainleft">
-<h1>Some geeks are playing with code behind. We will launch soon.</h1>
+<h1>Some geeks are playing with code in the background... <br> We will launch soon.</h1>
 </div>
 
 <div id="mainright">
-<h2>while we're getting things ready here, why don't you head on to <a href="http://blog.mozillakerala.org"> our blog.</a></h2>
+<h2>while we're getting things ready here, head on to <a href="http://blog.mozillakerala.org"> our blog.</a></h2>
 </div>
 
 
