--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- For Facebook -->
-  <meta property="og:site_name" content="MozillaKerala">
-  <meta property="og:title" content="MozillaKerala">
+  <meta property="og:site_name" content="Mozilla Kerala">
+  <meta property="og:title" content="Mozilla Kerala">
   <meta property="og:url" content="http://mozillakerala.org">
-  <meta property="og:description" content="doing good is part of our code!">
+  <meta property="og:description" content="Doing good is part of our code.">
   <meta property="og:image" content="img/headers/firefox.png">
 
   <meta name="title" content="MozillaKerala">
