--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div id="content-main" class="main" role="main">
 
 <div id="mainleft">
-<h1>Some geeks are playing with code in the background... <br> We will launch soon.</h1>
+<h1>Some geeks are playing with {code} in the background..... <br> We will launch soon.</h1>
 </div>
 
 <div id="mainright">
