--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </nav>
     <div id="facebook"><div class="fb-like-box" data-href="http://facebook.com/mozillakerala" data-width="200px" data-height="200px" data-colorscheme="light" data-show-faces="false" data-header="false" data-stream="false" data-show-border="false"></div> \
   </div>
-  <script src="//mozorg.cdn.mozilla.net/ml/tabzilla/tabzilla.js"></script>
+  <script src="//mozorg.cdn.mozilla.net/tabzilla/tabzilla.js"></script>
 </footer>
 
 </body></html>
